Implementing of a Start-Screen
 - remove unusing functions/vars
 - improve Toggle Full/Windows, when back
   to windows, size was not correct

--- a/asteroids.vcxproj
+++ b/asteroids.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="core.cpp" />
     <ClCompile Include="gfx.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Start.cpp" />
     <ClCompile Include="system.cpp" />
   </ItemGroup>
   <ItemGroup>
