New Sound for Start Screen, with loop
 - new wave
 - const var for max wave streams

--- a/asteroids.vcxproj
+++ b/asteroids.vcxproj
@@ -56,6 +56,7 @@
     <Media Include="waves\ShipEx.wav" />
     <Media Include="waves\Shipexpl.wav" />
     <Media Include="waves\Start.wav" />
+    <Media Include="waves\StartSc.wav" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="asteroids.ico" />
